# CODEWORDS-BENCH

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  pyproject.toml  railway.toml  spec_m3-m7.md
config/: models.json
scripts/: run_benchmark.py  run_decrypto_benchmark.py  run_decrypto_game.py  run_llm_game.py  run_overnight_benchmark.py  test_llm.py
spec_archive/: decrypto_output.md  decrypto_spec.md  improvements.md  spec_m0-m2.md
src/: __init__.py
src/agents/: __init__.py  cluer.py  guesser.py  llm.py
src/benchmark/: __init__.py  config.py  leaderboard.py  model_farm.py  runner.py
src/cloud_benchmark/: __init__.py  analysis.py  config.py  events.py  runner.py  state.py
src/core/: __init__.py  llm.py  parsing.py  state.py  trace.py
src/decrypto/: __init__.py  benchmark_config.py  benchmark_runner.py  game.py  metrics.py  models.py  orchestrator.py  parsing.py  visibility.py
src/engine/: __init__.py  game.py  models.py
src/hanabi/: __init__.py  game.py  models.py  (+4 more)
tests/: test_adversarial.py  test_benchmark.py  test_cloud_benchmark_runner_models.py  test_cluer.py  test_cost_estimator.py  test_decrypto_determinism.py  test_decrypto_grounding_penalty.py  test_decrypto_leakage_regression.py  test_decrypto_metrics.py  test_decrypto_metrics_exclusions.py  test_decrypto_parsing_repair.py  test_decrypto_semantic_slot_reuse.py  test_decrypto_visibility.py  test_engine.py  test_guesser.py  test_hanabi_engine.py  test_hanabi_summary.py  test_hanabi_visibility.py  test_metrics.py  test_runner.py
ui/: index.html  package-lock.json  package.json  tsconfig.json
(+55 files in other folders)
